@@ -1,0 +1,2 @@
+(: check for not absolute URI (FODC0007) :)
+fn:parse("<a xml:base='foo'/>", "blub")
