@@ -1,0 +1,2 @@
+(: check for invalid URI (FODC0007) :)
+fn:parse("<a xml:base='foo'/>", "http://")
